--- a/2a/v2-cod/exercicios_old/package.json
+++ b/2a/v2-cod/exercicios_old/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "router-context",
+  "name": "exercicios",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,9 +11,7 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2",
-    "router-context": "file:"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
